--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --mode production"
+    "build": "rollup --config",
+    "build-old": "webpack --mode production"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://gitlab.com/joan.costa.mombiela/stxt-parser-js#readme",
   "devDependencies": {
+    "rollup": "^4.19.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
