--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --config"
+    "build": "rollup --config",
+    "minify": "terser WebContent/js/stxt-parser.js -o dist/stxt-parser.min.js --compress --mangle"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,7 @@
   },
   "homepage": "https://gitlab.com/joan.costa.mombiela/stxt-parser-js#readme",
   "devDependencies": {
-    "rollup": "^4.19.0"
+    "rollup": "^4.19.0",
+    "terser": "^5.31.3"
   }
 }
